--- a/BoardApi/appsettings.json
+++ b/BoardApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:announcement-board.database.windows.net,1433;Initial Catalog=AnnouncementBoard;Persist Security Info=False;User ID={DB_USERNAME};Password={DB_PASSWORD};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": ""
   }
 }
